# RPIPicoMicroProjectsC1

./: .gitignore  README.md
2-PicoSetup/PicoWBlink/: CMakeLists.txt
2-PicoSetup/PicoWBlink/src/: CMakeLists.txt  WBlink.c
3-LED/JDBlinkExt/: CMakeLists.txt
3-LED/JDBlinkExt/src/: CMakeLists.txt  main.cpp
3-LED/LEDBrightness/src/: CMakeLists.txt  LED.cpp  LED.h  main.cpp
3-LED/LEDSensor/src/: CMakeLists.txt  main.c
3-LED/RGBLEDAssign/: CMakeLists.txt
3-LED/RGBLEDAssign/src/: CMakeLists.txt  LED.h  RGBLED.cpp  RGBLED.h  main.cpp
4-WS2812B/Animations/src/: CMakeLists.txt  RingAnimation.cpp  RingAnimation.h  TriTurn.cpp  main.cpp
4-WS2812B/AssignmentChaserTail/src/: CMakeLists.txt  ChaserTail.cpp  ChaserTail.h  DialUpDown.cpp  DialUpDown.h  RingChaser.h  TriTurn.h  main.cpp
4-WS2812B/RainbowWS2812B/src/: main.cpp
4-WS2812B/RingAnimation/src/: CMakeLists.txt  RingAnimation.cpp  RingAnimation.h  RingChaser.cpp  RingChaser.h  main.cpp
5-Switch/AssignmentLongPress/: CMakeLists.txt
5-Switch/AssignmentLongPress/src/: CMakeLists.txt  LedMgr.cpp  LedMgr.h  SwitchMgr.h  main.cpp
5-Switch/IntLatchedLed/src/: LedMgr.cpp  LedMgr.h  SwitchMgr.cpp  (+2 more)
6-RotaryEncoder/AssignRotDial/: CMakeLists.txt
6-RotaryEncoder/RotRing/: CMakeLists.txt
6-RotaryEncoder/RotRing/src/: CMakeLists.txt  RingRotate.cpp  RingRotate.h  RotEncAgent.cpp  main.cpp
7-PIR/PIRLED/: CMakeLists.txt
8-Project/LEDRingProject/: CMakeLists.txt
8-Project/LEDRingProject/src/: AnimationsCtr.cpp  AnimationsCtr.h  CMakeLists.txt  RotEncAgent.cpp  RotEncObserver.cpp  SwitchMgr.cpp  main.cpp
(+41 files in other folders)
